--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ search: true
 
 # Build settings
 markdown: kramdown
-remote_theme: "Jcrash29/minimal-mistakes/4.20.0-custom"
+remote_theme: "Jcrash29/minimal-mistakes"
 #remote_theme: "mmistakes/minimal-mistakes@4.21.0"
 # Outputting
 permalink: /:categories/:title/
@@ -114,3 +114,4 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
