--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ defaults:
       read_time: true
       comments: true
       share: true
-      related: true
+      related: false
   # _pages
   - scope:
       path: "_pages"
