--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ search: true
 
 # Build settings
 markdown: kramdown
-#remote_theme: "Jcrash29/minimal-mistakes"
-remote_theme: "mmistakes/minimal-mistakes@4.21.0"
+remote_theme: "Jcrash29/minimal-mistakes"
+#remote_theme: "mmistakes/minimal-mistakes@4.21.0"
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
